--- a/Main/assets/style.css
+++ b/Main/assets/style.css
@@ -81,6 +81,22 @@ header li {
   margin-left: 25px;
 }
 
+#c1 {
+  max-width: 200px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#c2 {
+  max-width: 200px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 h2 {
   font-size: 40px;
   padding: 2em 2em 2em 0em;
@@ -194,8 +210,9 @@ p {
   /* float: right; */
   /* display: inline-block; */
   margin-left: 25px;
+  margin-bottom: 25px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
+  font-size: 40px;
   list-style-type: none;
   color: #ffffff;
   text-decoration: underline;
