--- a/Main/assets/style.css
+++ b/Main/assets/style.css
@@ -4,11 +4,11 @@
   --bc2: #72310b85;
   --bc3: #ff4747;
 }
-
+/* linear gradient settings taken from bootcamp CSS snippet cheatsheet */
 body {
-  background-image: linear-gradient( 
+  background-image: linear-gradient(
     var(--bc2),
-    var(--bc1) 
+    var(--bc1)
   );
 }
 
@@ -21,7 +21,7 @@ body {
     animation-name: fadeInOut;
     animation-duration: 0.7s;
 } */
-  
+
   /* @keyframes rotate {
     0% {
       transform: rotate(0);
@@ -29,45 +29,46 @@ body {
     100% {
       transform: rotate(360deg);
     } */
-  
-/* 
+
+/*
   animation: infinite;
   animation-name: fadeInOut, moveLeft300px, bounce;
   animation-duration: 3s;
-  animation-iteration-count: 1; 
+  animation-iteration-count: 1;
 } */
 
+/* Font-Family settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 header {
   padding: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   /* background-color: var(--bc3); */
 
   color: #ffffff;
-  background-image: linear-gradient( 
+  background-image: linear-gradient(
     45deg,
     var(--bc3),
-    var(--bc1) 
+    var(--bc1)
   );
 
-  /* Turns this element into a flexbox */
   display: flex;
-  /* Forces elements to the next line if they don't fit */
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
+/* Settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 header h1 {
   display: inline-block;
   font-size: 48px;
 }
 
-/* navigation bar settings  */
+/* Settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 header nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
 }
 
+/* Settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 header ul, header a {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
@@ -76,6 +77,7 @@ header ul, header a {
   text-decoration: none;
 }
 
+/* Settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 header li {
   display: inline-block;
   margin-left: 25px;
@@ -145,9 +147,9 @@ h5 {
   /* word-wrap: normal; */
 }
 
+/* Settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 p {
   font-size: 16px;
-  
 }
 
 .works {
@@ -165,14 +167,24 @@ p {
   border: solid #33393f;
   margin: 0px 0px 20px 35px;
 }
+/* box shadow settings taken from bootcamp CSS snippet cheatsheet */
+#worksimg1:hover {
+  image-rendering: pixelated;
+  box-shadow: inset 8px 8px 8px rgb(77, 43, 43), 0 0 15px rgb(255, 0, 0);
+}
 
 #worksimg2 {
   box-sizing: border-box;
   width: 100%;
   float: right;
   position: relative;
-  margin: 0px 20px 20px 35px;
+  margin: 0px 0px 20px 35px;
   border: solid #33393f;
+}
+
+#worksimg2:hover {
+  image-rendering: pixelated;
+  box-shadow: inset 8px 8px 8px rgb(77, 43, 43), 0 0 15px rgb(255, 0, 0);
 }
 
 #worksimg3 {
@@ -180,8 +192,13 @@ p {
   width: 100%;
   float: right;
   position: relative;
-  margin: 0px 20px 20px 35px;
+  margin: 0px 0px 20px 35px;
   border: solid #33393f;
+}
+
+#worksimg3:hover {
+  image-rendering: pixelated;
+  box-shadow: inset 8px 8px 8px rgb(77, 43, 43), 0 0 15px rgb(255, 0, 0);
 }
 
 #worksimg4 {
@@ -189,8 +206,13 @@ p {
   width: 100%;
   float: right;
   position: relative;
-  margin: 0px 20px 20px 35px;
+  margin: 0px 0px 20px 35px;
   border: solid #33393f;
+}
+
+#worksimg4:hover {
+  image-rendering: pixelated;
+  box-shadow: inset 8px 8px 8px rgb(77, 43, 43), 0 0 15px rgb(255, 0, 0);
 }
 
 #worksimg5 {
@@ -198,8 +220,13 @@ p {
   width: 100%;
   float: right;
   position: relative;
-  margin: 0px 20px 20px 35px;
+  margin: 0px 0px 20px 35px;
   border: solid #33393f;
+}
+
+#worksimg5:hover {
+  image-rendering: pixelated;
+  box-shadow: inset 8px 8px 8px rgb(77, 43, 43), 0 0 15px rgb(255, 0, 0);
 }
 
 .videos {
@@ -218,9 +245,15 @@ p {
   margin: 0px 0px 20px 35px;
 }
 
+#videoimg1:hover {
+  image-rendering: pixelated;
+  box-shadow: inset 8px 8px 8px rgb(77, 43, 43), 0 0 15px rgb(255, 0, 0);
+}
+
+/* Settings taken from https://github.com/r134x7/HW01-Code-Refactor */
 .contact nav, .contact ul, .contact a {
-     padding-top: 30px;
-  /* margin-right: 20px; */
+  padding-top: 30px;
+  margin-right: 20px;
   /* float: right; */
   /* display: inline-block; */
   margin-left: 25px;
@@ -235,19 +268,6 @@ p {
   align-items: center;
 }
 
-
-   /* Turns this element into a flexbox */
-   /* display: flex; */
-   /* Forces elements to the next line if they don't fit */
-   /* flex-wrap: wrap; */
-   /* justify-content: space-between; */
-   /* align-items: center; */
-
-
-
-/* .linear-gradient-background {
-  background-image: linear-gradient(
-    rgba(232, 102, 236, 0.3) 0%,
-    rgba(232, 102, 236, 0.6) 100%
-  );
-} */
+.contact li {
+  background-color: #33393f;
+}
